--- a/FileCase/Views/FileCase/Index.cshtml
+++ b/FileCase/Views/FileCase/Index.cshtml
@@ -158,7 +158,7 @@
                         <li><a href="#">学习资料</a></li>
                         <li><a href="#">视频</a></li>
                     </ol>
-                    <span class="input-group-btn"><button class="btn btn-default" title="添加到收藏夹"><img src="img/shou.gif" /></button></span>
+                    <span class="input-group-btn"><button class="btn btn-default" title="添加到收藏夹"><img src="~/img/shou.gif" /></button></span>
                 </div>
             </div>
             <div class="col-lg-3 -collg3">
@@ -305,10 +305,10 @@
 
                     <div id="chosen_1" class="toppright btn-group">
                         <button id="btn1" class="btn btn-default likebutton">
-                            <img id="img1" src="img/list1.gif" />
+                            <img id="img1" src="~/img/list1.gif" />
                         </button>
                         <button id="btn2" class="btn btn-default likebutton">
-                            <img id="img2" src="img/icon0.gif" />
+                            <img id="img2" src="~/img/icon0.gif" />
                         </button>
                     </div>
                     <div class="clearfix"></div>
