--- a/FileCase/Views/FileCase/Index.cshtml
+++ b/FileCase/Views/FileCase/Index.cshtml
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Content/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="~/Content/filecase.css" />
-    <script type="text/javascript" src="~/Scripts/jquery-1.10.2.min.js"></script>
+    @*<script type="text/javascript" src="~/Scripts/jquery-1.10.2.min.js"></script>*@
+    <script type="text/javascript" src="~/Scripts/jquery-3.0.0.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.contextmenu.r2.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.treemenu.js"></script>
     <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
