--- a/FileCase/Content/filecase.css
+++ b/FileCase/Content/filecase.css
@@ -241,7 +241,7 @@ text-decoration: none;}
 	border: 1px solid #fff;}
 	
 .photo:hover{background:#F5F5F5;}
-.photo.choose{background:#E6e6FA;}	
+.photo.choosepicture{background:#E6e6FA;}	
 
 
 /*右边底部分页样式*/
