--- a/FileCase/Views/FileCase/Index.cshtml
+++ b/FileCase/Views/FileCase/Index.cshtml
@@ -159,7 +159,7 @@
                         <li><a href="#">学习资料</a></li>
                         <li><a href="#">视频</a></li>
                     </ol>
-                    <span class="input-group-btn"><button class="btn btn-default" title="添加到收藏夹"><img src="~/img/shou.gif" /></button></span>
+                    <span class="input-group-btn"><button class="btn btn-default" title="添加到收藏夹"><img src="~/Images/shou.gif" /></button></span>
                 </div>
             </div>
             <div class="col-lg-3 -collg3">
@@ -306,10 +306,10 @@
 
                     <div id="chosen_1" class="toppright btn-group">
                         <button id="btn1" class="btn btn-default likebutton">
-                            <img id="img1" src="~/img/list1.gif" />
+                            <img  id="img1" src="~/Images/list1.jpg" />
                         </button>
                         <button id="btn2" class="btn btn-default likebutton">
-                            <img id="img2" src="~/img/icon0.gif" />
+                            <img id="img2" src="~/Images/icon0.gif" />
                         </button>
                     </div>
                     <div class="clearfix"></div>
@@ -366,35 +366,35 @@
 
                     <div id="public_Img">
                         <div class="photo">
-                            <div><img src="img/11.jpg" /></div>
+                            <div><img src="~/Images/11.jpg" /></div>
                             <span>1111</span>
                         </div>
                         <div class="photo">
-                            <div><img src="img/22.JPG" /></div>
+                            <div><img src="~/Images/22.JPG" /></div>
                             <span>2222</span>
                         </div>
                         <div class="photo">
-                            <div><img src="img/33.JPG" /></div>
+                            <div><img src="~/Images/33.JPG" /></div>
                             <span>3333</span>
                         </div>
                         <div class="photo">
-                            <div><img src="img/44.JPG" /></div>
+                            <div><img src="~/Images/44.JPG" /></div>
                             <span>4444</span>
                         </div>
                         <div class="photo">
-                            <div><img src="img/55.JPG" /></div>
+                            <div><img src="~/Images/55.JPG" /></div>
                             <span>5555</span>
                         </div>
                         <div class="photo">
-                            <div><img src="img/66.JPG" /></div>
+                            <div><img src="~/Images/66.JPG" /></div>
                             <span>6666</span>
                         </div>
                         <div class="photo">
-                            <div><img src="img/bg2.jpg" /></div>
+                            <div><img src="~/Images/bg1.jpg" /></div>
                             <span>7777</span>
                         </div>
                         <div class="photo">
-                            <div><img src="img/bg1.jpg" /></div>
+                            <div><img src="~/Images/bg2.jpg" /></div>
                             <span>8888</span>
                         </div>
                     </div>
