--- a/FileCase/Views/Account/Login.cshtml
+++ b/FileCase/Views/Account/Login.cshtml
@@ -15,14 +15,16 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                        @*@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })*@
+                        <p>邮箱/用户名：</p>
                         <div class="col-md-10">
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                        @*@Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })*@
+                        <p>密码：</p>
                         <div class="col-md-10">
                             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
@@ -32,7 +34,8 @@
                         <div class="col-md-offset-2 col-md-10">
                             <div class="checkbox">
                                 @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe)
+                                @*@Html.LabelFor(m => m.RememberMe)*@
+                                <p>记住我？</p>
                             </div>
                         </div>
                     </div>
@@ -44,7 +47,6 @@
                     <p>
                         @Html.ActionLink("注册新用户", "Register")
                     </p>
-                    //Enable this once you have account confirmation enabled for password reset functionality
                     <p>
                         @Html.ActionLink("忘记密码?", "ForgotPassword")
                     </p>
